improve public achievements baselines
